# multi-agent-dev-team-api

./: .env.example  .gitignore  .todo  ARCHITECTURE.md  LICENSE  README.md  README2.md  config.yaml  pyproject.toml
sandbox/: Dockerfile
src/: config.py  graph.py  llm.py  main.py  state.py
src/agents/: architect.py  developer.py  pm.py  reviewer.py  tester.py
src/api/: app.py  dependencies.py  routes.py  schemas.py  sessions.py
src/prompts/: architect.py  developer.py  pm.py  reviewer.py  tester.py
src/tools/: file_io.py  project.py  search.py  shell.py
src/utils/: container.py  output.py  workspace.py
tests/: test_graph.py  test_state.py  test_tools.py
